# scaffold

./: README.md  pyproject.toml
api/: LICENSE  README.md  cli.py  requirements.txt  setup.py
docs/: .gitignore  .readthedocs.yaml  Makefile  api.rst  api_iso14443.rst  api_iso7816.rst  api_scaffold.rst  api_stm32.rst  architecture.rst  building_bitstream.rst  bus_bridge_fsm.dot  chain_module.rst  clock_module.rst  conf.py  external_power_supplies.rst  fpga_bus.rst  fpga_bus_bridge.rst  fpga_com.rst  gen_uart_baudrates.py  getting_started.rst  i2c_module.rst  index.rst  info.rst  ios.rst  iso14443_module.rst  iso7816_module.rst  kit_breadboard.rst  kit_smartcard.rst  kit_stm32.rst  kit_stm32f2.rst  kits.rst  leds_module.rst  peripherals.rst  power_module.rst  pulse_generator_module.rst  requirements.txt  right_matrix.rst  sockets.rst  spelling_wordlist.txt  spi_module.rst  (+3 more)
examples/: board-version.py  esp32-boot-flash-emulation.py  iso14443.py  iso7816.py  secaes-atmega.py  stm32.py
fpga-arch/: .gitignore  address_decoder.vhd  buffered_uart.vhd  buffered_uart_rx.vhd  buffered_uart_tx.vhd  bus_bridge.vhd  chain.vhd  chain_module.vhd  clock_module.vhd  common.vhd  confware-0.10.pof  confware-0.7.1.pof  confware-0.7.2.pof  confware-0.7.pof  confware-0.8.pof  confware-0.9.pof  confware.pof  conversion_setup.cof  convert_programming_file.tcl  fifo512.vhd  i2c.vhd  i2c_module.vhd  input_group_module.vhd  io_module.vhd  iso14443_clock_sync.vhd  iso14443_demod.vhd  iso14443_module.vhd  iso14443_rx.vhd  iso14443_rx_fifo.vhd  iso14443_tx.vhd  iso14443_tx_fifo.vhd  iso7816.vhd  (+34 more)
(+194 files in other folders)
